# sat-qkd-security-curves

./: .gitignore  README.md  py  pyproject.toml  pytest
.github/workflows/: ci.yml
notebooks/: walkthrough.ipynb
reports/: latest.json  latest_coincidence.json  latest_experiment.json  latest_pass.json  schedule_blinded.json
results/reports/: latest_coincidence.json
specs/contracts/: ARCHITECTURE.md  LINK_MODEL_CARD.md  OPERATOR_UX.md  atmosphere_scenarios.md  calibration_hooks.md  cvqkd_scaffold.md  hardware_outputs.md
src/: main.py
tests/: conftest.py  test_adversary_system_realism.py  test_assumptions_manifest.py  test_atmosphere_models.py  test_attack_surfaces.py  test_background_process.py  test_basic.py  test_basis_bias.py  test_bb84_protocol.py  test_bell_visibility_matrix.py  test_calibration.py  test_calibration_fit.py  test_calibration_model_card.py  test_calibration_residual_diagnostics.py  test_change_points.py  test_cli_help.py  test_cli_summary.py  test_clock_sync.py  test_constellation.py  test_contract_validator.py  test_cv_scaffold.py  test_dashboard_export.py  test_dashboard_helpers.py  test_decoy_realism.py  test_detector_attacks.py  test_detector_effects.py  test_eb_monte_carlo.py  test_eb_observables.py  test_eb_pass_experiment.py  test_engineering_outputs.py  test_event_stream_pipeline.py  test_fading_model.py  test_fading_samples.py  test_fdr_correction.py  test_figures_exist.py  test_fim_identifiability.py  test_finite_key_boundary.py  test_finite_key_composable.py  test_finite_key_consistency.py  test_forecast_harness.py  (+28 more)
(+50 files in other folders)
